--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <div class="main">
-        <div class="character charmander">
+        <div class="character charmander" data-pokemon="charmander">
           <div class="title">Charmander</div>
           <div
             style="
@@ -36,7 +36,7 @@
           ></div>
         </div>
 
-        <div class="character bulbasaur">
+        <div class="character bulbasaur" data-pokemon="bulbasaur">
           <div class="title">Bulbasaur</div>
           <div
             style="
@@ -52,7 +52,7 @@
           ></div>
         </div>
 
-        <div class="character squirtle">
+        <div class="character squirtle" data-pokemon="squirtle">
           <div class="title">Squirtle</div>
           <div
             style="
