--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
       </div>
     </div>
-    <!-- 
+
     <div id="battle-screen">
       <div class="fight-btn">
         fight
@@ -135,7 +135,7 @@
           />
         </div>
       </div>
-    </div> -->
+    </div>
 
     <script src="main.js"></script>
   </body>
